--- a/tutorials/usage_of_templatetagger-ver_0_0_6+.ipynb
+++ b/tutorials/usage_of_templatetagger-ver_0_0_6+.ipynb
@@ -111,12 +111,23 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ckonlpy version = 0.0.6\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../')"
+    "sys.path.insert(0, '../')\n",
+    "\n",
+    "import ckonlpy\n",
+    "print('ckonlpy version = {}'.format(ckonlpy.__version__))"
    ]
   },
   {
@@ -131,8 +142,8 @@
      "output_type": "stream",
      "text": [
       "{'Josa': {'은', '는'},\n",
-      " 'Modifier': {'우리', '이', '이번'},\n",
-      " 'Noun': {'아이오아이', '번것', '것', '행사', '아이'}}\n"
+      " 'Modifier': {'이번', '이', '우리'},\n",
+      " 'Noun': {'번것', '것', '아이', '행사', '아이오아이'}}\n"
      ]
     }
    ],
@@ -236,8 +247,8 @@
      "output_type": "stream",
      "text": [
       "{'Josa': {'은', '는'},\n",
-      " 'Modifier': {'우리', '이', '이번'},\n",
-      " 'Noun': {'꺼', '트와이스', '우리', 'tt', '행사', '아이', '트둥이', '것', '아이오아이', '번것'}}\n"
+      " 'Modifier': {'이번', '이', '우리'},\n",
+      " 'Noun': {'행사', '것', '번것', '트와이스', '트둥이', 'tt', '아이오아이', '우리', '아이', '꺼'}}\n"
      ]
     }
    ],
@@ -313,41 +324,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "하지만 아직 '우리트둥이꺼tt는' 이라는 어절이 제대로 인식되지 않습니다. 그 이유는 templates에 'Noun + Noun + Josa'가 없었기 때문입니다. 이 경우에는 KoNLPy에 해당 어절을 분석하라고 보냅니다. 하지만 '트둥이'라는 단어를 알지 못해서 제대로 인식되지 않습니다. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('우리', 'Modifier'),\n",
-       " ('트둥이', 'Noun'),\n",
-       " ('꺼', 'Noun'),\n",
-       " ('tt', 'Noun'),\n",
-       " ('는', 'Josa'),\n",
-       " ('좋', 'Adjective'),\n",
-       " ('아요', 'Eomi')]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twitter.pos('우리트둥이꺼tt는 좋아요')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Template\n",
     "현재는 customized_tagger로 탬플릿 기반 토크나이저를 이용하고 있습니다. 어떤 탬플릿이 들어있는지 확인하기 위해서는 아래 부분을 확인하면 됩니다. \n",
     "\n",
@@ -358,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -384,7 +360,7 @@
        " ('Modifier', 'Noun', 'Josa')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -438,12 +414,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "작업 중 탬플릿을 추가하고 싶다면, 탬플릿은 하나 단위로 tuple of str의 형식으로 입력할 수 있습니다. \\_customized_tagger.add_a_templated()은 중복되는 탬플릿이 아닌지 확인한 다음 탬플릿을 추가하는 함수입니다. "
+    "('Noun', 'Noun', 'Josa')가 입력되었고, '트와이스', 'tt'가 명사인지 알고 있기 때문에 아래 문장은 제대로 인식이 됩니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('우리', 'Noun'),\n",
+       " ('트둥이', 'Noun'),\n",
+       " ('tt', 'Noun'),\n",
+       " ('는', 'Josa'),\n",
+       " ('좋', 'Adjective'),\n",
+       " ('아요', 'Eomi')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('우리트둥이tt는 좋아요')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Noun, Noun, Noun, Josa) 가 template 에 없지만, (Noun, ) 과 (Noun, Noun, Josa) 가 있기 때문에 매칭이 됩니다. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('우리', 'Noun'),\n",
+       " ('트둥이', 'Noun'),\n",
+       " ('tt', 'Noun'),\n",
+       " ('는', 'Josa'),\n",
+       " ('좋', 'Adjective'),\n",
+       " ('아요', 'Eomi')]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('우리트둥이tt는 좋아요')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "버전 0.0.5x 까지는 어절 전체가 template 에 매칭될 때에만 template tagger 를 이용하였습니다. 하지만, 0.0.6+ 이상에서는 어절의 중간에 template matching 이 되어도 template tagger 를 이용합니다.\n",
+    "\n",
+    "이전처럼 어절 전체가 template 으로 완전히 매칭될 때만 template tagger 를 이용하고 싶다면 perfect_match = True 로 설정합니다.\n",
+    "\n",
+    "(Noun, Noun, Noun, Josa) template 은 없기 때문에 perfect_match = True 로 설정하면, 어절을 base tagger 를 이용하여 품사 판별을 수행합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('우', 'Adverb'),\n",
+       " ('리트', 'Noun'),\n",
+       " ('둥이', 'Noun'),\n",
+       " ('tt', 'Alpha'),\n",
+       " ('는', 'Verb'),\n",
+       " ('좋', 'Adjective'),\n",
+       " ('아요', 'Eomi')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('우리트둥이tt는 좋아요', perfect_match=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "작업 중 탬플릿을 추가하고 싶다면, 탬플릿은 하나 단위로 tuple of str의 형식으로 입력할 수 있습니다.\n",
+    "\n",
+    "\\_customized_tagger.add_a_templated()은 중복되는 탬플릿이 아닌지 확인한 다음 탬플릿을 추가하는 함수입니다. \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -467,16 +554,16 @@
        " ('Noun', 'Noun', 'Josa'),\n",
        " ('Noun', 'Noun', 'Verb'),\n",
        " ('Modifier', 'Noun', 'Josa'),\n",
-       " ('Modifier', 'Noun', 'Noun', 'Noun', 'Josa')]"
+       " ('Noun', 'Noun', 'Noun', 'Josa')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twitter.template_tagger.add_a_template(('Modifier', 'Noun', 'Noun', 'Noun', 'Josa'))\n",
+    "twitter.template_tagger.add_a_template(('Noun', 'Noun', 'Noun', 'Josa'))\n",
     "twitter.template_tagger.templates"
    ]
   },
@@ -484,12 +571,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "('Noun', 'Noun', 'Josa')가 입력되었고, '트와이스', 'tt'가 명사인지 알고 있기 때문에 아래 문장은 제대로 인식이 됩니다. "
+    "Template 을 추가하면 perfect_match 일 때에도 매칭이 되는 template 이 있기 때문에 동일한 결과가 출력됩니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -505,86 +592,13 @@
        " ('아요', 'Eomi')]"
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twitter.pos('우리트둥이tt는 좋아요')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "어절의 중간에 매칭이 되는 template 이 있어도 작동이 됩니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('!', 'Punctuation'),\n",
-       " ('우리', 'Noun'),\n",
-       " ('트둥이', 'Noun'),\n",
-       " ('tt', 'Noun'),\n",
-       " ('는', 'Josa'),\n",
-       " ('좋', 'Adjective'),\n",
-       " ('아요', 'Eomi')]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twitter.pos('!우리트둥이tt는 좋아요')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "어절 전체가 template 으로 완전히 매칭될 때만 template tagger 를 이용하고 싶다면 perfect_match = True 로 설정합니다.\n",
-    "\n",
-    "(Punctuation, Noun, Noun, Noun, Josa) template 은 없기 때문에 perfect_match = True 로 설정하면, 어절을 base tagger 를 이용하여 품사 판별을 수행합니다. Baes tagger 에는 사용자 사전이 추가되어있지 않아서 제대로 작동하지 않습니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('!', 'Punctuation'),\n",
-       " ('우', 'Adverb'),\n",
-       " ('리트', 'Noun'),\n",
-       " ('둥이', 'Noun'),\n",
-       " ('tt', 'Alpha'),\n",
-       " ('는', 'Verb'),\n",
-       " ('좋', 'Adjective'),\n",
-       " ('아요', 'Eomi')]"
-      ]
-     },
      "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twitter.pos('!우리트둥이tt는 좋아요', perfect_match=True)"
+    "twitter.pos('우리트둥이tt는 좋아요', perfect_match=True)"
    ]
   },
   {
@@ -663,7 +677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Modifier', 'Noun', 'Name', 'Josa'])\n"
+      "dict_keys(['Noun', 'Modifier', 'Josa', 'Name'])\n"
      ]
     }
    ],
@@ -706,7 +720,7 @@
       " ('Noun', 'Noun', 'Josa'),\n",
       " ('Noun', 'Noun', 'Verb'),\n",
       " ('Modifier', 'Noun', 'Josa'),\n",
-      " ('Modifier', 'Noun', 'Noun', 'Noun', 'Josa'),\n",
+      " ('Noun', 'Noun', 'Noun', 'Josa'),\n",
       " ('Name', 'Josa')]\n"
      ]
     },
@@ -910,14 +924,14 @@
     "\n",
     "sent = '우리아이오아이는 정말 이뻐요'\n",
     "print('before : %s\\n' % twitter.pos(sent))\n",
-    "print('after  : %s' % postprocessor.tag(sent))"
+    "print('after  : %s' % postprocessor.pos(sent))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "stopwords 에 등록된 단어, (단어, 품사)는 tag 결과에서 제외됩니다. "
+    "stopwords 에 등록된 단어, (단어, 품사)는 pos 결과에서 제외됩니다. "
    ]
   },
   {
@@ -947,14 +961,14 @@
     "\n",
     "sent = '우리아이오아이는 정말 이뻐요'\n",
     "print('before : %s\\n' % twitter.pos(sent))\n",
-    "print('after  : %s' % postprocessor.tag(sent))"
+    "print('after  : %s' % postprocessor.pos(sent))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "특정 품사를 지정하면 해당 품사만 tag 에서 출력됩니다. "
+    "특정 품사를 지정하면 해당 품사만 pos 에서 출력됩니다. "
    ]
   },
   {
@@ -984,14 +998,14 @@
     "\n",
     "sent = '우리아이오아이는 정말 이뻐요'\n",
     "print('before : %s\\n' % twitter.pos(sent))\n",
-    "print('after  : %s' % postprocessor.tag(sent))"
+    "print('after  : %s' % postprocessor.pos(sent))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "치환할 단어, (단어, 품사)를 dict 형식으로 정의하면 tag 에서 단어가 치환되어 출력됩니다. "
+    "치환할 단어, (단어, 품사)를 dict 형식으로 정의하면 pos 에서 단어가 치환되어 출력됩니다. "
    ]
   },
   {
@@ -1024,7 +1038,7 @@
     "\n",
     "sent = '우리아이오아이는 정말 이뻐요'\n",
     "print('before : %s\\n' % twitter.pos(sent))\n",
-    "print('after  : %s' % postprocessor.tag(sent))"
+    "print('after  : %s' % postprocessor.pos(sent))"
    ]
   },
   {
@@ -1053,7 +1067,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'아이오아이', ('아이오아이', 'Noun'), '공연'}\n"
+      "{'공연', ('아이오아이', 'Noun'), '아이오아이'}\n"
      ]
     }
    ],
@@ -1087,7 +1101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('이', 'Josa'), '은', '는'}\n"
+      "{'은', ('이', 'Josa'), '는'}\n"
      ]
     }
    ],
@@ -1122,7 +1136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'아빠': '아버지', ('엄마', 'Noun'): '어머니'}\n"
+      "{('엄마', 'Noun'): '어머니', '아빠': '아버지'}\n"
      ]
     }
    ],
