Add ngram tutorial

--- a/tutorials/usage_of_templatetagger-ver_0_0_6+.ipynb
+++ b/tutorials/usage_of_templatetagger-ver_0_0_6+.ipynb
@@ -142,8 +142,8 @@
      "output_type": "stream",
      "text": [
       "{'Josa': {'은', '는'},\n",
-      " 'Modifier': {'이번', '이', '우리'},\n",
-      " 'Noun': {'번것', '것', '아이', '행사', '아이오아이'}}\n"
+      " 'Modifier': {'우리', '이번', '이'},\n",
+      " 'Noun': {'아이', '것', '아이오아이', '번것', '행사'}}\n"
      ]
     }
    ],
@@ -247,8 +247,8 @@
      "output_type": "stream",
      "text": [
       "{'Josa': {'은', '는'},\n",
-      " 'Modifier': {'이번', '이', '우리'},\n",
-      " 'Noun': {'행사', '것', '번것', '트와이스', '트둥이', 'tt', '아이오아이', '우리', '아이', '꺼'}}\n"
+      " 'Modifier': {'우리', '이번', '이'},\n",
+      " 'Noun': {'아이', '트둥이', '우리', '꺼', '트와이스', '아이오아이', 'tt', '것', '번것', '행사'}}\n"
      ]
     }
    ],
@@ -677,7 +677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Noun', 'Modifier', 'Josa', 'Name'])\n"
+      "dict_keys(['Josa', 'Name', 'Modifier', 'Noun'])\n"
      ]
     }
    ],
@@ -1045,15 +1045,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading wordset\n",
-    "\n",
-    "utils 에는 stopwords, passwords, replace word pair 를 파일로 저장하였을 경우, 이를 손쉽게 불러오는 함수가 있습니다.\n",
-    "\n",
-    "load_wordset 은 set of str 혹은 set of tuple 을 return 합니다. 예시의 passwords.txt 의 내용은 아래와 같습니다. 단어의 품사는 한 칸 띄어쓰기로 구분합니다.\n",
-    "\n",
-    "    아이오아이\n",
-    "    아이오아이 Noun\n",
-    "    공연"
+    "하나의 단어로 묶을 단어열을 tuple of str 로 만든 뒤, 품사와 함께 nested tuple 로 만듭니다. ngram 에 입력된 단어열은 ngram pos tag 로 합쳐져 출력됩니다. ngram pos tag 는 임의의 태그 이름을 넣을 수 있습니다."
    ]
   },
   {
@@ -1067,13 +1059,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'공연', ('아이오아이', 'Noun'), '아이오아이'}\n"
+      "before : [('미스', 'Noun'), ('함무라비', 'Noun'), ('는', 'Josa'), ('재밌는', 'Adjective'), ('드라마', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n",
+      "\n",
+      "after  : [('미스 - 함무라비', 'Noun'), ('는', 'Josa'), ('재밌는', 'Adjective'), ('드라마', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n",
+      "\n",
+      "\n",
+      "before : [('바람', 'Noun'), ('의', 'Josa'), ('나라', 'Noun'), ('는', 'Josa'), ('게임', 'Noun'), ('이름', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n",
+      "\n",
+      "after  : [('바람 - 의 - 나라', 'Game'), ('는', 'Josa'), ('게임', 'Noun'), ('이름', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ngrams = [(('미스', '함무라비'), 'Noun'), (('바람', '의', '나라'), 'Game')]\n",
+    "\n",
+    "postprocessor = Postprocessor(\n",
+    "    base_tagger = twitter,\n",
+    "    ngrams = ngrams\n",
+    ")\n",
+    "\n",
+    "sent = '미스 함무라비는 재밌는 드라마입니다'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s\\n\\n' % postprocessor.pos(sent))\n",
+    "\n",
+    "sent = '바람의 나라는 게임이름 입니다'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s' % postprocessor.pos(sent))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "단어열만 입력한 경우에는 ngram 의 품사를 명사로 가정합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before : [('미스', 'Noun'), ('함무라비', 'Noun'), ('는', 'Josa'), ('재밌는', 'Adjective'), ('드라마', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n",
+      "\n",
+      "after  : [('미스 - 함무라비', 'Noun'), ('는', 'Josa'), ('재밌는', 'Adjective'), ('드라마', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n",
+      "\n",
+      "\n",
+      "before : [('바람', 'Noun'), ('의', 'Josa'), ('나라', 'Noun'), ('는', 'Josa'), ('게임', 'Noun'), ('이름', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n",
+      "\n",
+      "after  : [('바람 - 의 - 나라', 'Noun'), ('는', 'Josa'), ('게임', 'Noun'), ('이름', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ngrams = [('미스', '함무라비'), ('바람', '의', '나라')]\n",
+    "\n",
+    "postprocessor = Postprocessor(\n",
+    "    base_tagger = twitter,\n",
+    "    ngrams = ngrams\n",
+    ")\n",
+    "\n",
+    "sent = '미스 함무라비는 재밌는 드라마입니다'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s\\n\\n' % postprocessor.pos(sent))\n",
+    "\n",
+    "sent = '바람의 나라는 게임이름 입니다'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s' % postprocessor.pos(sent))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading wordset\n",
+    "\n",
+    "utils 에는 stopwords, passwords, replace word pair 를 파일로 저장하였을 경우, 이를 손쉽게 불러오는 함수가 있습니다.\n",
+    "\n",
+    "load_wordset 은 set of str 혹은 set of tuple 을 return 합니다. 예시의 passwords.txt 의 내용은 아래와 같습니다. 단어의 품사는 한 칸 띄어쓰기로 구분합니다.\n",
+    "\n",
+    "    아이오아이\n",
+    "    아이오아이 Noun\n",
+    "    공연"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'아이오아이', ('아이오아이', 'Noun'), '공연'}\n"
      ]
     }
    ],
    "source": [
     "from ckonlpy.utils import load_wordset\n",
-    "from ckonlpy.utils import load_replace_wordpair\n",
     "\n",
     "passwords = load_wordset('./passwords.txt')\n",
     "print(passwords)"
@@ -1092,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1101,7 +1192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'은', ('이', 'Josa'), '는'}\n"
+      "{'은', '는', ('이', 'Josa')}\n"
      ]
     }
    ],
@@ -1127,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1136,23 +1227,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('엄마', 'Noun'): '어머니', '아빠': '아버지'}\n"
+      "{'아빠': '아버지', ('엄마', 'Noun'): '어머니'}\n"
      ]
     }
    ],
    "source": [
+    "from ckonlpy.utils import load_replace_wordpair\n",
+    "\n",
     "replace = load_replace_wordpair('./replacewords.txt')\n",
     "print(replace)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ngram 은 띄어쓰기 단위로 ngram 의 구성 단어를 기술합니다. tap 기준으로 ngram pos tag 를 저장합니다. pos tag 가 없다면 단어열만 포함합니다.\n",
+    "\n",
+    "    str str\n",
+    "    str str str\\tstr"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('바람', '의', '나라'), (('미스', '함무라비'), 'Noun')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ckonlpy.utils import load_ngram\n",
+    "\n",
+    "ngrams = load_ngram('./ngrams.txt')\n",
+    "pprint(ngrams)"
+   ]
   }
  ],
  "metadata": {
